@@ -1,4 +1,5 @@
 Changes
+examples/ex1.pl
 Fast.pm
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
