@@ -22,6 +22,7 @@ meta-spec:
 name: CGI-Pure-Fast
 no_index:
   directory:
+    - examples
     - inc
     - t
 requires:
